--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ p{
 nav{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     height:10vh;
-    position:sticky;
+    position:fixed;
 
 }
 nav img{
@@ -17,6 +17,7 @@ nav img{
 }
 /*------------------- Page liste  -------------------------------------*/
 /*------------------------------------- Section liste -------------------------------------*/
+
 section{
     width: 80vw;
     margin-left:10vw;
@@ -28,7 +29,7 @@ section{
 }
 #contenant{
     display:flex;
-    flex-direction:row;
+    flex-direction:row wrap;
 }
 .card{
     margin:1.5vw;
