--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,9 @@ nav img{
     height:8vh;
     margin-left:10vw;
 }
+nav div a {
+    text-decoration: none;
+}
 /*------------------- Page liste  -------------------------------------*/
 /*------------------------------------- Section liste -------------------------------------*/
 
@@ -28,8 +31,7 @@ section{
     margin-top:5vh;
 }
 #contenant{
-    display:flex;
-    flex-direction:row wrap;
+    width:80vw;
 }
 .card{
     margin:1.5vw;
@@ -38,6 +40,7 @@ section{
 .card img{
     max-height:30vh;
 }
+
 /*------------------- Page liste  -------------------------------------*/
 .imgcouverturedetail{
     width:50vw;
